--- a/demo/mixed-modules/public/index.html
+++ b/demo/mixed-modules/public/index.html
@@ -4,5 +4,7 @@
     <body>
         <div id="entry"></div>
         <script src="app.js"></script>
+        <script src="es6-lazy.js"></script>
+        <script src="commonjs-lazy.js"></script>
     </body>
 </html>
